# midia

./: .env  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  justfile
.github/: Dockerfile  dependabot.yml  labeler.yml
.github/workflows/: docker.yml  json-check.yml  labeler.yml  release.yml  rust-clippy.yml  tests.yml
.run/: Run midia.run.xml  Test midia.run.xml
assets/data/: names.txt
assets/fonts/: Open Font License.txt
assets/img/: button.xcf  icon.xcf  logo.xcf  tileset.xcf
data/: names.json
data/items/: ammo.json  cloth.json  melee_weapons.json  misc.json  ranged_weapons.json  tools.json
doc/: items_to_add.md
scripts/: before-commit.sh
src/: app.rs  colors.rs  fov.rs  input.rs  lang.rs  main.rs  settings.rs  window.rs
src/assets/: alert.rs  button.rs  fonts.rs  images.rs  mod.rs  names.rs  prepared_font.rs  tileset.rs
src/game/: avatar.rs  fov.rs  game_data.rs  lang.rs  mod.rs  traits.rs  wield.rs  world.rs
src/game/actions/: action.rs  action_impl.rs  action_type.rs  attack_target.rs  mod.rs
src/game/ai/: brain.rs  mod.rs  system.rs
src/game/animals/: fur_color.rs  helpers.rs  mod.rs
src/game/bodies/: body.rs  data.rs  mod.rs  sex.rs
src/game/game_data/: data_entity.rs  item.rs  mod.rs  names_pack.rs
src/game/human/: gender.rs  hair_color.rs  helpers.rs  main_hand.rs  mod.rs  personality.rs  skin_tone.rs
src/game/log/: category.rs  event.rs  helpers.rs  mod.rs
src/game/map/: chunk.rs  fov.rs  item.rs  mod.rs  passage.rs  pos.rs  terrain.rs  tile.rs
src/savefile/: game_view.rs  load.rs  meta.rs  mod.rs  save.rs
src/scenes/: helpers.rs  mod.rs  scene.rs  scene_impl.rs  transition.rs
src/settings/: debug.rs  input.rs  mod.rs  window.rs
src/ui/: game_log.rs  layout.rs  mod.rs  position.rs  traits.rs
(+143 files in other folders)
