[package]
name = "midia"
description = "Roguelike about The Chetyrekhstvorchataya Midia"
version = "0.1.0"
authors = ["Ilya Agafonov <tairesh.rus@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies.tetra]
version = "0.9"
default-features = false
features = ["serde", "texture_png", "texture_jpeg", "font_ttf"]

[dependencies]
# my small library for roguelikes' geometry
roguemetry = { version = "0.1.1", features = ["serde", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
rand = "0.9"
chrono = "0.4"
enum_dispatch = "0.3"
arrayvec = { version = "0.7", features = ["serde"] }
once_cell = "1.19"
enum-iterator = "2.0"
typetag = "0.2"
pathfinding = "4.9"
smallvec = "1.13"
bracket-noise = "~0.8"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
test-case = "3.0"
